helm-chart/ecommerce-main-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecommerce-deployment
  labels:
    app: ecommerce-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ecommerce
  template:
    metadata:
      labels:
        app: ecommerce
    spec:
      containers:
        - name: ecommerce
          image: 818111884800.dkr.ecr.us-east-1.amazonaws.com/ecommerce:1.0
          ports:
            - containerPort: 8081

            #probes
          startupProbe:
            httpGet:
              path: /health
              port: 8081
            initialDelaySeconds: 30
            failureThreshold: 6
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8081
            periodSeconds: 10
            timeoutSeconds: 2
          readinessProbe:
            httpGet:
              path: /health
              port: 8081
            periodSeconds: 10
            timeoutSeconds: 2

          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"

        
---
apiVersion: v1
kind: Service
metadata:
 name: ecommerce-service
spec:
 type: ClusterIP
 selector:
   app: ecommerce
 ports:
   - name: http
     port: 8081   
     targetPort: 8081
